playground/error_test/build.txt
main.cpp: In function ‘int main()’:
main.cpp:4:1: error: expected ‘;’ before ‘}’ token
 }
 ^
